--- a/ubuntu_wordpress_IAC/Vagrantfile
+++ b/ubuntu_wordpress_IAC/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "eurolinux-vagrant/centos-stream-9"
+  config.vm.box = "ubuntu/focal64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -32,7 +32,7 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-   config.vm.network "private_network", ip: "192.168.56.28"
+   config.vm.network "private_network", ip: "192.168.56.30"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -54,7 +54,7 @@ Vagrant.configure("2") do |config|
   #   vb.gui = true
   #
   #   # Customize the amount of memory on the VM:
-     vb.memory = "1024"
+     vb.memory = "1600"
    end
   #
   # View the documentation for the provider you are using for more
@@ -64,16 +64,60 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
    config.vm.provision "shell", inline: <<-SHELL
-     yum install httpd wget unzip vim -y
-     systemctl start httpd
-     systemctl enabled httpd
-     mkdir -p /tmp/finance
-     cd /tmp/finance
-     wget https://www.tooplate.com/zip-templates/2135_mini_finance.zip
-     unzip -o 2135_mini_finance.zip
-     cp -r 2135_mini_finance/* /var/www/html/
-     systemctl restart httpd
-     cd /tmp/
-     rm -rf /tmp/finance
+   sudo apt update
+   sudo apt install apache2 \
+                    ghostscript \
+                    libapache2-mod-php \
+                    mysql-server \
+                    php \
+                    php-bcmath \
+                    php-curl \
+                    php-imagick \
+                    php-intl \
+                    php-json \
+                    php-mbstring \
+                    php-mysql \
+                    php-xml \
+                    php-zip -y
+            
+   sudo mkdir -p /srv/www
+   sudo chown www-data: /srv/www
+   curl https://wordpress.org/latest.tar.gz | sudo -u www-data tar zx -C /srv/www
+   
+   cat > /etc/apache2/sites-available/wordpress.conf <<EOF
+<VirtualHost *:80>
+       DocumentRoot /srv/www/wordpress
+       <Directory /srv/www/wordpress>
+           Options FollowSymLinks
+           AllowOverride Limit Options FileInfo
+           DirectoryIndex index.php
+           Require all granted
+       </Directory>
+       <Directory /srv/www/wordpress/wp-content>
+           Options FollowSymLinks
+           Require all granted
+       </Directory>
+</VirtualHost>
+EOF
+   
+   sudo a2ensite wordpress
+   sudo a2enmod rewrite
+   sudo a2dissite 000-default
+   
+   
+   mysql -u root -e 'CREATE DATABASE wordpress;'
+   mysql -u root -e 'CREATE USER wordpress@localhost IDENTIFIED BY "admin123";'
+   mysql -u root -e 'GRANT SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER ON wordpress.* TO wordpress@localhost;'   
+   mysql -u root -e 'FLUSH PRIVILEGES;'
+   
+   sudo -u www-data cp /srv/www/wordpress/wp-config-sample.php /srv/www/wordpress/wp-config.php
+   sudo -u www-data sed -i 's/database_name_here/wordpress/' /srv/www/wordpress/wp-config.php
+   sudo -u www-data sed -i 's/username_here/wordpress/' /srv/www/wordpress/wp-config.php
+   sudo -u www-data sed -i 's/password_here/admin123/' /srv/www/wordpress/wp-config.php
+   
+   systemctl restart mysql
+   systemctl restart apache2
+   
+   
    SHELL
 end
